[project]
name = "przedmiot-fakultatywny-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.5.1",
    "datetime>=6.0",
    "flake8>=7.3.0",
    "loguru>=0.7.3",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=7.1.0",
    "vulture>=2.16",
]

[tool.black]
line-length=88
target-version=['py312']
include='\.pyi?$'
exclude='''
/(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
